dashboard/remontees/remontees.css
html {
    margin: 0;
    padding: 0;
    font-family: Arial, sans-serif;
    background-color: #3d536c;
}

#remontees div {
    display: inline-block;
    font-family: Arial, sans-serif;
    font-size: 16px;
    font-weight: bold;

}

button {
    width: 10%;
    padding: 10px;
    margin: 10px 0;
    background-color: #0062cc;
    color: #f5f5f5;
    font-size: 16px;
    font-weight: bold;
    border: none;
    border-radius: 5px;
    cursor: pointer;
    transition: background-color 0.3s ease;
}

button:hover {
    background-color: #01448f;
}

button:active {
    background-color: #012e6b;
}

.buttons {
    display: flex;
    justify-content: space-between;
    width: 100%;
    padding: 0px 10px;
}

.header {
    display: flex;
    width: 100%;
    padding: 5px;
    justify-content: space-between;
    box-sizing: border-box;
    text-align: center;
    align-items: center;
    background-color: #1a1f1f;
    border-radius: 10px;
}

.remontee-piste-container {
    box-sizing: border-box;
    width: 300px;
    padding: 20px;
    margin: 10px;
    text-align: center;
    background-color: #1a1f1f;
    border-radius: 10px;
    height: auto;
}

.remontee-container {
    width: 100%;
    padding-bottom: 5px;
    padding-top: 5px;
}

.remontee-texte {
    width: 100%;
    vertical-align: middle;
    font-weight: bold;
    font-size: 20px;
    color: #f5f5f5;


}

[class^="remontee-id-"]{
    width: 100%;
    text-align: center;

}

.margin {
    margin-left: 125px;
    margin-right: 125px;
    margin-top: 50px;
    margin-bottom: 50px;
}

.switch-position {
    vertical-align: middle;
}

.piste-red{
    color: #9c0a0a;
    font-weight: bold;
}

.piste-green{
    color: #09be21;
    font-weight: bold;

}

